Refactored dark mode styling, fixed svg in dark mode.

--- a/src/styles.css
+++ b/src/styles.css
@@ -14,34 +14,37 @@
     @apply no-underline;
     @apply hover:underline;
   }
+
+  html {
+    @apply bg-white dark:bg-gray-900;
+    @apply text-black dark:text-white;
+  }
 }
 
-.avatar {
-  background: url("data-url:./assets/avatar.webp");
-  background-size: contain;
-  background-repeat: no-repeat;
-}
+@layer components {
+  .avatar {
+    background: url("data-url:./assets/avatar.webp");
+    background-size: contain;
+    background-repeat: no-repeat;
+  }
 
-.github-icon {
-  background: url("data-url:./assets/github-icon.svg");
-  background-size: contain;
-  background-repeat: no-repeat;
-}
+  .github-icon {
+    mask: url("data-url:./assets/github-icon.svg") center/contain no-repeat;
+    @apply bg-black dark:bg-white;
+  }
 
-.mastodon-icon {
-  background: url("data-url:./assets/mastodon-icon.svg");
-  background-size: contain;
-  background-repeat: no-repeat;
-}
+  .mastodon-icon {
+    mask: url("data-url:./assets/mastodon-icon.svg") center/contain no-repeat;
+    @apply bg-black dark:bg-white;
+  }
 
-.rss-icon {
-  background: url("data-url:./assets/rss-icon.svg");
-  background-size: contain;
-  background-repeat: no-repeat;
-}
+  .rss-icon {
+    mask: url("data-url:./assets/rss-icon.svg") center/contain no-repeat;
+    @apply bg-black dark:bg-white;
+  }
 
-.blog-icon {
-  background: url("data-url:./assets/blog-icon.svg");
-  background-size: contain;
-  background-repeat: no-repeat;
+  .blog-icon {
+    mask: url("data-url:./assets/blog-icon.svg") center/contain no-repeat;
+    @apply bg-black dark:bg-white;
+  }
 }
